DOMCacheStorage should not prevent pages from entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=202608

Reviewed by Youenn Fablet.

Source/WebCore:

Make DOMCacheStorage fully suspendable by queueing all its asynchronous promise resolutions
to a SuspendableTaskQueue. This makes sure that no promises are resolved while suspended
in the page cache.

Test: http/tests/navigation/page-cache-domcachestorage-pending-promise.html

* Modules/cache/DOMCacheStorage.cpp:
(WebCore::DOMCacheStorage::DOMCacheStorage):
(WebCore::DOMCacheStorage::doSequentialMatch):
(WebCore::DOMCacheStorage::match):
(WebCore::DOMCacheStorage::has):
(WebCore::DOMCacheStorage::open):
(WebCore::DOMCacheStorage::doOpen):
(WebCore::DOMCacheStorage::remove):
(WebCore::DOMCacheStorage::doRemove):
(WebCore::DOMCacheStorage::keys):
(WebCore::DOMCacheStorage::canSuspendForDocumentSuspension const):
* Modules/cache/DOMCacheStorage.h:

LayoutTests:

Add layout test coverage.

* http/tests/navigation/page-cache-domcachestorage-pending-promise-expected.txt: Added.
* http/tests/navigation/page-cache-domcachestorage-pending-promise.html: Added.


Canonical link: https://commits.webkit.org/216255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250965 268f45cc-cd09-0410-ab3c-d52691b4dbfc