Source/WebCore/Modules/cache/DOMCacheStorage.cpp
@@ -31,7 +31,7 @@
 #include "JSDOMCache.h"
 #include "JSFetchResponse.h"
 #include "ScriptExecutionContext.h"
-
+#include "SuspendableTaskQueue.h"
 
 namespace WebCore {
 using namespace WebCore::DOMCacheEngine;
@@ -39,9 +39,12 @@ using namespace WebCore::DOMCacheEngine;
 DOMCacheStorage::DOMCacheStorage(ScriptExecutionContext& context, Ref<CacheStorageConnection>&& connection)
     : ActiveDOMObject(&context)
     , m_connection(WTFMove(connection))
+    , m_taskQueue(SuspendableTaskQueue::create(&context))
 {
     suspendIfNeeded();
 }
+
+DOMCacheStorage::~DOMCacheStorage() = default;
 
 Optional<ClientOrigin> DOMCacheStorage::origin() const
 {
@@ -86,17 +89,17 @@ static inline Ref<DOMCache> copyCache(const Ref<DOMCache>& cache)
 void DOMCacheStorage::doSequentialMatch(DOMCache::RequestInfo&& info, CacheQueryOptions&& options, Ref<DeferredPromise>&& promise)
 {
     startSequentialMatch(WTF::map(m_caches, copyCache), WTFMove(info), WTFMove(options), [this, pendingActivity = makePendingActivity(*this), promise = WTFMove(promise)](auto&& result) mutable {
-        if (m_isStopped)
-            return;
-        if (result.hasException()) {
-            promise->reject(result.releaseException());
-            return;
-        }
-        if (!result.returnValue()) {
-            promise->resolve();
-            return;
-        }
-        promise->resolve<IDLInterface<FetchResponse>>(*result.returnValue());
+        m_taskQueue->enqueueTask([promise = WTFMove(promise), result = WTFMove(result)]() mutable {
+            if (result.hasException()) {
+                promise->reject(result.releaseException());
+                return;
+            }
+            if (!result.returnValue()) {
+                promise->resolve();
+                return;
+            }
+            promise->resolve<IDLInterface<FetchResponse>>(*result.returnValue());
+        });
     });
 }
 
@@ -104,7 +107,9 @@ void DOMCacheStorage::match(DOMCache::RequestInfo&& info, CacheQueryOptions&& op
 {
     retrieveCaches([this, info = WTFMove(info), options = WTFMove(options), promise = WTFMove(promise)](Optional<Exception>&& exception) mutable {
         if (exception) {
-            promise->reject(WTFMove(exception.value()));
+            m_taskQueue->enqueueTask([promise = WTFMove(promise), exception = WTFMove(exception.value())]() mutable {
+                promise->reject(WTFMove(exception));
+            });
             return;
         }
 
@@ -114,7 +119,9 @@ void DOMCacheStorage::match(DOMCache::RequestInfo&& info, CacheQueryOptions&& op
                 m_caches[position]->match(WTFMove(info), WTFMove(options), WTFMove(promise));
                 return;
             }
-            promise->resolve();
+            m_taskQueue->enqueueTask([promise = WTFMove(promise)]() mutable {
+                promise->resolve();
+            });
             return;
         }
 
@@ -125,11 +132,13 @@ void DOMCacheStorage::match(DOMCache::RequestInfo&& info, CacheQueryOptions&& op
 void DOMCacheStorage::has(const String& name, DOMPromiseDeferred<IDLBoolean>&& promise)
 {
     retrieveCaches([this, name, promise = WTFMove(promise)](Optional<Exception>&& exception) mutable {
-        if (exception) {
-            promise.reject(WTFMove(exception.value()));
-            return;
-        }
-        promise.resolve(m_caches.findMatching([&](auto& item) { return item->name() == name; }) != notFound);
+        m_taskQueue->enqueueTask([this, name, promise = WTFMove(promise), exception = WTFMove(exception)]() mutable {
+            if (exception) {
+                promise.reject(WTFMove(exception.value()));
+                return;
+            }
+            promise.resolve(m_caches.findMatching([&](auto& item) { return item->name() == name; }) != notFound);
+        });
     });
 }
 
@@ -180,7 +189,9 @@ void DOMCacheStorage::open(const String& name, DOMPromiseDeferred<IDLInterface<D
 {
     retrieveCaches([this, name, promise = WTFMove(promise)](Optional<Exception>&& exception) mutable {
         if (exception) {
-            promise.reject(WTFMove(exception.value()));
+            m_taskQueue->enqueueTask([promise = WTFMove(promise), exception = WTFMove(exception.value())]() mutable {
+                promise.reject(WTFMove(exception));
+            });
             return;
         }
         doOpen(name, WTFMove(promise));
@@ -191,23 +202,26 @@ void DOMCacheStorage::doOpen(const String& name, DOMPromiseDeferred<IDLInterface
 {
     auto position = m_caches.findMatching([&](auto& item) { return item->name() == name; });
     if (position != notFound) {
-        auto& cache = m_caches[position];
-        promise.resolve(DOMCache::create(*scriptExecutionContext(), String { cache->name() }, cache->identifier(), m_connection.copyRef()));
+        m_taskQueue->enqueueTask([this, promise = WTFMove(promise), cache = m_caches[position].copyRef()]() mutable {
+            promise.resolve(DOMCache::create(*scriptExecutionContext(), String { cache->name() }, cache->identifier(), m_connection.copyRef()));
+        });
         return;
     }
 
     m_connection->open(*origin(), name, [this, name, promise = WTFMove(promise), pendingActivity = makePendingActivity(*this)](const CacheIdentifierOrError& result) mutable {
-        if (!m_isStopped) {
-            if (!result.has_value())
-                promise.reject(DOMCacheEngine::convertToExceptionAndLog(scriptExecutionContext(), result.error()));
-            else {
-                if (result.value().hadStorageError)
-                    logConsolePersistencyError(scriptExecutionContext(), name);
+        if (!result.has_value()) {
+            m_taskQueue->enqueueTask([this, promise = WTFMove(promise), error = result.error()]() mutable {
+                promise.reject(DOMCacheEngine::convertToExceptionAndLog(scriptExecutionContext(), error));
+            });
+        } else {
+            if (result.value().hadStorageError)
+                logConsolePersistencyError(scriptExecutionContext(), name);
 
-                auto cache = DOMCache::create(*scriptExecutionContext(), String { name }, result.value().identifier, m_connection.copyRef());
+            m_taskQueue->enqueueTask([this, name, promise = WTFMove(promise), identifier = result.value().identifier]() mutable {
+                auto cache = DOMCache::create(*scriptExecutionContext(), String { name }, identifier, m_connection.copyRef());
                 promise.resolve(cache);
                 m_caches.append(WTFMove(cache));
-            }
+            });
         }
     });
 }
@@ -216,7 +230,9 @@ void DOMCacheStorage::remove(const String& name, DOMPromiseDeferred<IDLBoolean>&
 {
     retrieveCaches([this, name, promise = WTFMove(promise)](Optional<Exception>&& exception) mutable {
         if (exception) {
-            promise.reject(WTFMove(exception.value()));
+            m_taskQueue->enqueueTask([promise = WTFMove(promise), exception = WTFMove(exception.value())]() mutable {
+                promise.reject(WTFMove(exception));
+            });
             return;
         }
         doRemove(name, WTFMove(promise));
@@ -227,12 +243,14 @@ void DOMCacheStorage::doRemove(const String& name, DOMPromiseDeferred<IDLBoolean
 {
     auto position = m_caches.findMatching([&](auto& item) { return item->name() == name; });
     if (position == notFound) {
-        promise.resolve(false);
+        m_taskQueue->enqueueTask([promise = WTFMove(promise)]() mutable {
+            promise.resolve(false);
+        });
         return;
     }
 
     m_connection->remove(m_caches[position]->identifier(), [this, name, promise = WTFMove(promise), pendingActivity = makePendingActivity(*this)](const CacheIdentifierOrError& result) mutable {
-        if (!m_isStopped) {
+        m_taskQueue->enqueueTask([this, name, promise = WTFMove(promise), result]() mutable {
             if (!result.has_value())
                 promise.reject(DOMCacheEngine::convertToExceptionAndLog(scriptExecutionContext(), result.error()));
             else {
@@ -240,21 +258,23 @@ void DOMCacheStorage::doRemove(const String& name, DOMPromiseDeferred<IDLBoolean
                     logConsolePersistencyError(scriptExecutionContext(), name);
                 promise.resolve(!!result.value().identifier);
             }
-        }
+        });
     });
 }
 
 void DOMCacheStorage::keys(KeysPromise&& promise)
 {
     retrieveCaches([this, promise = WTFMove(promise)](Optional<Exception>&& exception) mutable {
-        if (exception) {
-            promise.reject(WTFMove(exception.value()));
-            return;
-        }
+        m_taskQueue->enqueueTask([this, promise = WTFMove(promise), exception = WTFMove(exception)]() mutable {
+            if (exception) {
+                promise.reject(WTFMove(exception.value()));
+                return;
+            }
 
-        promise.resolve(WTF::map(m_caches, [] (const auto& cache) {
-            return cache->name();
-        }));
+            promise.resolve(WTF::map(m_caches, [] (const auto& cache) {
+                return cache->name();
+            }));
+        });
     });
 }
 
@@ -270,7 +290,7 @@ const char* DOMCacheStorage::activeDOMObjectName() const
 
 bool DOMCacheStorage::canSuspendForDocumentSuspension() const
 {
-    return !hasPendingActivity();
+    return true;
 }
 
 } // namespace WebCore
